tests/fixtures/negative/skp1-unsupported-flags.hex
534b50310101010100100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
